my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ECYCLICTRAIT/ECYCLICTRAIT.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECYCLICTRAIT.dml:10:1: warning WEXPERIMENTAL: Use of unsupported feature: traits
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECYCLICTRAIT.dml:16:1: warning WEXPERIMENTAL: Use of unsupported feature: traits
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECYCLICTRAIT.dml:22:1: warning WEXPERIMENTAL: Use of unsupported feature: traits
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECYCLICTRAIT.dml:28:1: warning WEXPERIMENTAL: Use of unsupported feature: traits
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECYCLICTRAIT.dml:12:5: error ECYCLICTEMPLATE: cyclic template inheritance
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECYCLICTRAIT.dml:18:5: via here
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECYCLICTRAIT.dml:24:5: via here
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECYCLICTRAIT.dml:30:5: via here
